# dis-viz

./: .dockerignore  .gitmodules  Dockerfile  README.md  build.sh  docker-compose.yml  package-lock.json
analysis/: .gitignore  Dockerfile  main.ipynb  query.sh
analysis/backedge-test/: CMakeLists.txt  main.cpp
analysis/correspondence_test/: CMakeLists.txt  main.cpp
analysis/sample_inputs/: bubble_sort.cpp
analysis/simple-optparser/: simpleopt.cc
analysis/volume/: instructions.py  utils.py
dis-viz-backend/: .gitignore  BinaryList.json  CMakeLists.txt  Dockerfile  pyproject.toml  requirements.txt
dis-viz-backend/app/: instructions.py  main.py  utils.py
dis-viz-backend/sample_inputs/: eg1.cpp  hello.cpp
dis-viz-backend/simple-optparser/: simpleopt.cc  simpleopt_wrapper.cc
dis-viz-backend/src/: dyninst_wrapper.cpp  json_converter.cpp  main.cpp  parse_source.cpp
dis-viz-backend/src/include/: dyninst_wrapper.hpp  json_converter.hpp  parse_source.hpp
dis-viz-frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
dis-viz-frontend/public/: index.html
dis-viz-frontend/src/: App.js  App.tsx  ComponentFactory.tsx  api.js  api.ts  config.js  config.ts  index.tsx  inteldocs.json  types.ts  utils.js  utils.ts
dis-viz-frontend/src/app/: store.ts
dis-viz-frontend/src/components/: App.tsx  BackEdge.tsx  DisassemblyBlock.tsx  DisassemblyLine.js  DisassemblyLine.tsx  DisassemblyView.js  DisassemblyView.tsx  HidableDisassembly.tsx  InputFilePath.js  InputFilePath.tsx  Minimap.tsx  ObjectViz.js  ObjectViz.tsx  SourceFileTree.tsx  SourceMinimap.tsx  SourceView.js  SourceView.tsx  TabContent.js  TabContent.tsx  Winbox.js
dis-viz-frontend/src/features/active-disassembly-view/: activeDisassemblyViewSlice.ts
dis-viz-frontend/src/features/binary-data/: binaryDataSlice.ts
dis-viz-frontend/src/features/minimap/: minimapSlice.ts
dis-viz-frontend/src/features/selections/: selectionsSlice.ts
dis-viz-frontend/src/styles/: disassemblyview.css  inputsourcefilepath.css  sourcefiletree.css  sourceview.css
json/: bubble-O0.json  bubble-O1.json  bubble-O2.json  bubble-O3.json  eg1-O0.json  eg1-O3.json
sample_inputs/: bubble_sort-man-swap.cpp  bubble_sort-slight.cpp  codehoist-do-while.c  codehoist.c  codehoist.cpp  compile.sh  flag-cmp.sh  ifelse.c  loop.cpp  loop_outer_block.c  loop_unroll.cpp  vec_add.cu
sample_inputs/inlines/: file1.cpp  file2.cpp
