[tool.poetry]
name = "dis-viz-backend"
version = "0.1.0"
description = "This is the backend implementation of the dis-viz project."
authors = ["Shadmaan Hye <praptishadmaan@email.arizona.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<=3.9.13"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
